--- a/components/atom/progressBar/package.json
+++ b/components/atom/progressBar/package.json
@@ -2,7 +2,10 @@
   "name": "@s-ui/react-atom-progress-bar",
   "version": "2.6.0",
   "description": "",
-  "main": "lib/index.js",
+  "type": "module",
+  "exports": {
+    ".":  "./lib/index.js"
+  },
   "scripts": {
     "prepare": "rimraf ./lib && npm run build:js && npm run build:styles",
     "build:js": "babel --presets sui ./src --out-dir ./lib",
