--- a/components/atom/upload/package.json
+++ b/components/atom/upload/package.json
@@ -2,7 +2,10 @@
   "name": "@s-ui/react-atom-upload",
   "version": "3.5.0",
   "description": "",
-  "main": "lib/index.js",
+  "type": "module",
+  "exports": {
+    ".":  "./lib/index.js"
+  },
   "scripts": {
     "prepare": "npm run build:js && npm run build:styles",
     "build:js": "babel --presets sui ./src --out-dir ./lib",
