--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@s-ui/documentation-library": "1",
     "@s-ui/helpers": "1",
+    "@s-ui/lint": "4",
     "@s-ui/mono": "2",
     "@s-ui/precommit": "3",
     "@s-ui/studio": "11",
