fix(components/atom/slider): handle error fix
ISSUES CLOSED: #1974

--- a/components/atom/slider/package.json
+++ b/components/atom/slider/package.json
@@ -9,7 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "rc-slider": "9"
+    "rc-slider": "9",
+    "react-use": "17.3"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
