--- a/components/atom/tooltip/package.json
+++ b/components/atom/tooltip/package.json
@@ -12,7 +12,7 @@
     "@loadable/component": "5.15.x",
     "@s-ui/hoc": "1",
     "@s-ui/react-hooks": "1",
-    "react-use": "^17.2.4",
+    "react-use": "17.3",
     "reactstrap": "8.9.0",
     "ua-parser-js": "0.7.28"
   },
