refactor(components/atom/slider): remove unnecesary dependency

--- a/components/atom/slider/package.json
+++ b/components/atom/slider/package.json
@@ -9,8 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "rc-slider": "9",
-    "react-use": "17.3"
+    "rc-slider": "9"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
