--- a/components/atom/panel/package.json
+++ b/components/atom/panel/package.json
@@ -9,7 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "1",
+    "@s-ui/react-atom-polymorphic-element": "1"
   },
   "keywords": [],
   "author": "",
