--- a/components/atom/button/demo/package.json
+++ b/components/atom/button/demo/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@s-ui/react-atom-icon": "1"
+  }
 }
