fix(components/molecule/tabs): fix classes, mod demo and unnecesary propsTypes declaration and defau

--- a/components/molecule/dropdownOption/demo/package.json
+++ b/components/molecule/dropdownOption/demo/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "@s-ui/react-atom-input": "5",
     "@s-ui/react-hooks": "1",
-    "lorem-ipsum": "^2.0.3"
+    "lorem-ipsum": "2.0.4"
   }
 }
