--- a/components/molecule/tabs/demo/package.json
+++ b/components/molecule/tabs/demo/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-layout-media-query": "1"
+    "@s-ui/react-atom-icon": "1.14.0",
+    "@s-ui/react-layout-media-query": "1",
+    "lorem-ipsum": "2.0.4"
   }
 }
