--- a/components/molecule/dropdownList/package.json
+++ b/components/molecule/dropdownList/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@s-ui/react-atom-input": "5",
     "@s-ui/react-hooks": "1",
+    "@s-ui/react-molecule-dropdown-option": "1",
     "lodash.isequal": "4.5"
   },
   "peerDependencies": {
