--- a/components/molecule/photoUploader/demo/package.json
+++ b/components/molecule/photoUploader/demo/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-atom-button": "1"
+    "@s-ui/react-atom-button": "1",
+    "@s-ui/react-molecule-dropdown-option": "^1.42.0",
+    "@s-ui/react-molecule-select": "^1.52.0"
   }
 }
