--- a/components/molecule/photoUploader/demo/package.json
+++ b/components/molecule/photoUploader/demo/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-button": "1",
-    "@s-ui/react-molecule-dropdown-option": "^1.42.0",
-    "@s-ui/react-molecule-select": "^1.52.0"
+    "@s-ui/react-molecule-dropdown-option": "1",
+    "@s-ui/react-molecule-select": "1"
   }
 }
