--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           node-version: 16
           registry-url: 'https://registry.npmjs.org'
-      - name: Testing
+      - name: Linting
         run: |
           npm run phoenix:ci
           npm run lint
@@ -206,7 +206,8 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: public-folder
-      - name: Compress public directory
+          path: .
+      - name: Uncompress public directory
         run: tar -zxvf public-dir.tar.gz -C ./public
       - name: Deploy
         id: deploy
