--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,7 @@ on:
     branches: [master]
 
 jobs:
+  # Cancel Previous Redundant Builds
   check-skip:
     runs-on: ubuntu-latest
     steps:
@@ -14,7 +15,7 @@ jobs:
         uses: styfle/cancel-workflow-action@0.6.0
         with:
           access_token: ${{ github.token }}
-
+  # Assigns the event creator to the PR
   assign_pr_owner:
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +24,7 @@ jobs:
         if: github.event_name == 'pull_request' && github.event.action == 'opened'
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-
+  # Creates a build and uploads an artifact
   build:
     runs-on: ubuntu-latest
     steps:
@@ -45,7 +46,7 @@ jobs:
         with:
           name: public-folder
           path: public-dir.tar.gz
-
+  # Lint the code
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -60,7 +61,7 @@ jobs:
         run: |
           npm run phoenix:ci
           npm run lint
-
+  # Test components
   testing:
     runs-on: ubuntu-latest
     outputs:
@@ -111,7 +112,7 @@ jobs:
           script: |
             const script = require('./.github/SCRIPTS/exportCoverageFromJsonSummary')
             await script({github, context, core, exec}, './coverage/coverage.json')
-
+  # Publish the necessary npm new package versions
   release:
     needs: [lint, testing]
     runs-on: ubuntu-latest
@@ -191,7 +192,7 @@ jobs:
           GITHUB_TOKEN: ${{github.token}}
           GITHUB_USER: sui-bot
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
+  # Deploy artifact to Vercel
   deploy:
     needs: [build, lint, testing]
     runs-on: ubuntu-latest
@@ -210,7 +211,8 @@ jobs:
       - name: Uncompress public directory
         run: |
           ls -lisa
-          tar -zxvf public-dir.tar.gz -C ./public
+          mkdir public
+          tar -zxvf ./public-dir.tar.gz -C ./public
       - name: Deploy
         id: deploy
         run: |
