fix(Root): hotfix

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -211,7 +211,7 @@ jobs:
       - name: Uncompress public directory
         run: |
           mkdir public
-          tar -zxvf ./public-dir.tar.gz -C ./public
+          tar -zxvf ./public-dir.tar.gz -C ./public/
           ls -lisa
           ls -lisa ./public/
           rm ./public-dir.tar.gz
