--- a/components/molecule/progressSteps/package.json
+++ b/components/molecule/progressSteps/package.json
@@ -9,6 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
+    "@s-ui/react-molecule-stepper": "2",
     "@s-ui/component-dependencies": "1"
   },
   "keywords": [],
