--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -114,10 +114,10 @@ jobs:
             await script({github, context, core, exec}, './coverage/coverage.json')
       - name: prepare coverage directory
         run: |
-          mkdir _coverage
-          cp -rf ./coverage/coverage.xml ./coverage/coverage.json ./coverage/report-html/* ./_coverage/
+          mkdir coverage
+          cp -rf ./coverage/coverage.xml ./coverage/coverage.json ./coverage/report-html/* ./coverage/
       - name: Compress coverage directory
-        run: tar -zcvf coverage-dir.tar.gz ./_coverage/
+        run: tar -zcvf coverage-dir.tar.gz ./coverage/
       - uses: actions/upload-artifact@v2
         with:
           name: coverage-folder
