--- a/components/molecule/stepper/package.json
+++ b/components/molecule/stepper/package.json
@@ -19,7 +19,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@s-ui/react-atom-polymorphic-element": "1",
-    "@s-ui/react-hooks": "1"
+    "@s-ui/react-hooks": "1",
+    "@s-ui/react-primitive-polymorphic-element": "1",
+    "@s-ui/react-primitive-injector": "1"
   }
 }
