refactor(components/molecule/accordion): wip

--- a/components/molecule/accordion/demo/package.json
+++ b/components/molecule/accordion/demo/package.json
@@ -9,5 +9,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lorem-ipsum": "2.0.4"
+  }
 }
