--- a/components/molecule/accordion/package.json
+++ b/components/molecule/accordion/package.json
@@ -9,7 +9,10 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "1",
+    "@s-ui/react-hooks": "1",
+    "@s-ui/react-primitive-injector": "1",
+    "@s-ui/react-primitive-polymorphic-element": "1"
   },
   "keywords": [],
   "author": "",
