--- a/components/molecule/accordion/package.json
+++ b/components/molecule/accordion/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@s-ui/component-dependencies": "1",
-    "@s-ui/react-hooks": "1",
+    "@s-ui/react-hooks": "1.29.0",
     "@s-ui/react-primitive-injector": "1",
-    "@s-ui/react-primitive-polymorphic-element": "1"
+    "@s-ui/react-primitive-polymorphic-element": "1",
+    "react-use": "17.3.2"
   },
   "keywords": [],
   "author": "",
