feat(components/molecule/accordion): accordion

--- a/components/molecule/accordion/demo/package.json
+++ b/components/molecule/accordion/demo/package.json
@@ -11,8 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-hooks": "1.29.0",
-    "lorem-ipsum": "2.0.4",
-    "react-use": "17.3.2"
+    "lorem-ipsum": "2.0.4"
   }
 }
