--- a/components/molecule/accordion/demo/package.json
+++ b/components/molecule/accordion/demo/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-icon": "1",
-    "lorem-ipsum": "2.0.4"
+    "@s-ui/react-atom-tag": "2",
+    "lorem-ipsum": "2.0.4",
+    "react-json-view": "1.21.3"
   }
 }
