--- a/components/molecule/breadcrumb/package.json
+++ b/components/molecule/breadcrumb/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/component-dependencies": "1",
+    "@s-ui/react-hooks": "1",
     "@s-ui/react-icons": "1"
   }
 }
