feat(components/atom/input): add missing dep

--- a/components/atom/input/package.json
+++ b/components/atom/input/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@s-ui/react-hooks": "1",
+    "@s-ui/react-primitive-polymorphic-element": "1",
     "imask": "3.4.0"
   },
   "peerDependencies": {
