feat(components/molecule/accordion): major canges for molecule/accordion
BREAKING CHANGES:

 completely new

--- a/components/molecule/accordion/demo/package.json
+++ b/components/molecule/accordion/demo/package.json
@@ -9,5 +9,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@s-ui/react-atom-icon": "1",
+    "@s-ui/react-atom-tag": "2",
+    "lorem-ipsum": "2.0.4",
+    "react-json-view": "1.21.3"
+  }
 }
