--- a/components/molecule/buttonGroup/package.json
+++ b/components/molecule/buttonGroup/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@s-ui/component-dependencies": "1",
-    "@s-ui/react-atom-button": "1"
+    "@s-ui/react-atom-button": "1",
+    "@s-ui/react-primitive-polymorphic-element": "1"
   },
   "keywords": [],
   "author": "",
