--- a/components/behavior/sticky/demo/package.json
+++ b/components/behavior/sticky/demo/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-atom-button": "1"
+    "@s-ui/react-hooks": "1",
+    "lorem-ipsum": "2.0.4",
+    "react-use": "17.4.0"
   }
 }
