--- a/components/atom/icon/package.json
+++ b/components/atom/icon/package.json
@@ -9,7 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/react-hooks": "1"
+    "@s-ui/react-hooks": "1",
+    "@s-ui/react-primitive-polymorphic-element": "1"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
