--- a/components/atom/checkbox/package.json
+++ b/components/atom/checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-atom-checkbox",
-  "version": "2.17.0",
+  "version": "3.0.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "1",
+    "@s-ui/react-hooks": "1"
   },
   "keywords": [],
   "author": "",
