--- a/components/atom/skeleton/package.json
+++ b/components/atom/skeleton/package.json
@@ -4,7 +4,7 @@
   "description": "Display the loading state of a component while avoding layout shift",
   "main": "lib/index.js",
   "scripts": {
-    "prepare": "rimraf ./lib && npm run build:js && npm run build:styles",
+    "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
     "build:js": "babel --presets sui ./src --out-dir ./lib",
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
