--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "lint": "npm run lint:js && npm run lint:sass",
     "lint:js": "sui-lint js",
     "lint:sass": "sui-lint sass",
-    "respawn": "npm run clean && npm run install:dependencies && npm run phoenix && npm run install:themes",
-    "install:dependencies": "npm install --prefer-online --legacy-peer-deps",
+    "respawn": "npm run clean && npm run phoenix && npm run install:themes",
     "install:themes": "node scripts/build-themes.js",
     "phoenix": "npx @s-ui/mono@2 run 'rm -rf ./node_modules' && rm -rf ./node_modules package-lock.json && npm install --legacy-peer-deps --no-optional --no-fund --no-audit && npx -y ultra-runner --raw --recursive prepublishOnly &>/dev/null",
     "phoenix:ci": "npm install --legacy-peer-deps --no-optional --no-fund --no-audit && npx -y ultra-runner --raw --recursive prepublishOnly",
