--- a/components/atom/checkbox/demo/package.json
+++ b/components/atom/checkbox/demo/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-atom-icon": "1"
+    "@s-ui/react-atom-icon": "1",
+    "react-json-view": "1.21.3",
+    "react-use": "17.4.0"
   }
 }
