feat(components/atom/checkbox): v2

--- a/components/atom/checkbox/demo/package.json
+++ b/components/atom/checkbox/demo/package.json
@@ -11,8 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-atom-icon": "1",
-    "react-json-view": "1.21.3",
-    "react-use": "17.4.0"
+    "@s-ui/react-atom-icon": "1"
   }
 }
