--- a/components/molecule/badgeCounter/demo/package.json
+++ b/components/molecule/badgeCounter/demo/package.json
@@ -8,9 +8,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@s-ui/react-atom-button": "1",
-    "@s-ui/react-atom-icon": "1"
-  }
+  "license": "ISC"
 }
