--- a/components/organism/nestedCheckboxes/demo/package.json
+++ b/components/organism/nestedCheckboxes/demo/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/hoc": "1",
-    "@s-ui/react-atom-icon": "1"
+    "@s-ui/react-atom-icon": "1",
+    "react-json-view": "1.21.3"
   }
 }
