chore(Root): update operating system devices to the issue template reporter

--- a/.github/ISSUE_TEMPLATE/report-a-bug.yml
+++ b/.github/ISSUE_TEMPLATE/report-a-bug.yml
@@ -53,10 +53,9 @@ body:
       label: Which operating systems have you used?
       description: You may select more than one.
       options:
-        - label: Desktop
-        - label: Tablet
-        - label: Mobile
-        - label: smartTV
+        - label: Windows
+        - label: Linux
+        - label: macOS
   - type: textarea
     attributes:
       label: browser and version
