--- a/components/molecule/select/demo/package.json
+++ b/components/molecule/select/demo/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/hoc": "1",
-    "@s-ui/react-molecule-dropdown-option": "1",
-    "axios": "^0.21.1"
+    "@s-ui/react-molecule-dropdown-option": "1"
   }
 }
