--- a/components/primitive/portal/package.json
+++ b/components/primitive/portal/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "@s-ui/js": "2.26.0",
+    "@s-ui/react-hooks": "1",
     "@s-ui/react-primitive-injector": "1",
     "@s-ui/react-primitive-polymorphic-element": "1"
   }
