--- a/components/molecule/autosuggest/demo/package.json
+++ b/components/molecule/autosuggest/demo/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@s-ui/hoc": "1",
     "@s-ui/react-atom-button": "1",
+    "@s-ui/react-atom-icon": "1",
     "@s-ui/react-molecule-autosuggest-field": "2",
     "@s-ui/react-molecule-dropdown-option": "1",
     "@s-ui/react-molecule-input-tags": "2",
     "@s-ui/react-molecule-select": "1",
-    "axios": "^0.21.1"
+    "axios": "0.21.4"
   }
 }
