--- a/components/molecule/autosuggest/package.json
+++ b/components/molecule/autosuggest/package.json
@@ -14,6 +14,7 @@
     "@s-ui/react-hooks": "1",
     "@s-ui/react-molecule-dropdown-list": "1",
     "@s-ui/react-molecule-input-tags": "2",
+    "@s-ui/react-primitive-injector": "1",
     "lodash.isequal": "4.5"
   },
   "peerDependencies": {
