feat(components/molecule/imageEditor): abstract children

--- a/components/molecule/imageEditor/package.json
+++ b/components/molecule/imageEditor/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@s-ui/js": "2",
     "@s-ui/react-atom-slider": "1",
+    "@s-ui/react-primitive-injector": "1",
+    "classnames": "2.2.5",
     "react-easy-crop": "3.4.0"
   }
 }
