--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "fs-extra": "10.0.1",
     "globby": "11.0.3",
     "sinon": "11.1.1",
-    "validate-commit-msg": "2.12.2"
+    "validate-commit-msg": "2.12.2",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "@s-ui/component-dependencies": "1"
