--- a/components/hook/use-portal/demo/package.json
+++ b/components/hook/use-portal/demo/package.json
@@ -3,14 +3,12 @@
   "private": true,
   "version": "1.0.0",
   "description": "",
-  "main": "lib/index.js",
   "scripts": {
-    "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
-    "build:js": "babel --presets sui ./src --out-dir ./lib",
-    "build:styles": "cpx './src/**/*.scss' ./lib"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "react-popper": "2.3.0"
+    "react-popper": "2.3.0",
+    "@s-ui/react-hooks": "1"
   },
   "keywords": [],
   "author": "",
