--- a/components/hook/use-portal/package.json
+++ b/components/hook/use-portal/package.json
@@ -9,7 +9,9 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "use-ssr": "1.0.24"
+    "use-ssr": "1.0.24",
+    "classnames": "2.2.5",
+    "@s-ui/react-hooks": "1"
   },
   "keywords": [],
   "author": "",
