--- a/components/hook/use-portal/demo/package.json
+++ b/components/hook/use-portal/demo/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "react-popper": "2.3.0",
-    "@s-ui/react-hooks": "1"
+    "@popperjs/core": "2.11.6",
+    "@s-ui/react-hooks": "1",
+    "react-fast-compare": "3.2.0"
   },
   "keywords": [],
   "author": "",
