--- a/components/atom/input/package.json
+++ b/components/atom/input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-atom-input",
-  "version": "5.21.0-beta.4",
+  "version": "5.21.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
