--- a/components/molecule/inputTags/package.json
+++ b/components/molecule/inputTags/package.json
@@ -9,8 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/react-atom-input": "5.21.0-beta.4",
-    "@s-ui/react-atom-tag": "2.43.0-beta.0",
+    "@s-ui/react-atom-input": "5",
+    "@s-ui/react-atom-tag": "2",
     "@s-ui/react-hooks": "1"
   },
   "peerDependencies": {
