chore(Root): wip

--- a/.github/workflows/hacktoberfest.yml
+++ b/.github/workflows/hacktoberfest.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            console.log({context})
+            console.log(context.eventName, {label: context.payload.label})
