--- a/.github/workflows/hacktoberfest.yml
+++ b/.github/workflows/hacktoberfest.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            console.log(context.eventName, {label: context.payload.label})
+            console.log(context, {eventName: context.eventName,label_name: context.payload.label.name})
