--- a/.github/workflows/hacktoberfest.yml
+++ b/.github/workflows/hacktoberfest.yml
@@ -14,4 +14,7 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            console.log(context, {eventName: context.eventName,label_name: context.payload.label.name})
+            const script = require('./.github/SCRIPTS/hacktoberfest')
+            await script({github, context, core, exec}, ["andresin87"])
+            
+            
