--- a/.github/ISSUE_TEMPLATE/report-a-bug.yml
+++ b/.github/ISSUE_TEMPLATE/report-a-bug.yml
@@ -1,7 +1,7 @@
 name: Report a bug / issue
 description: Report a bug / issue to help us improve SUI
 title: '🪲 '
-labels: []
+labels: [bug]
 body:
   - type: markdown
     attributes:
