--- a/.github/ISSUE_TEMPLATE/propose-a-new-component.yml
+++ b/.github/ISSUE_TEMPLATE/propose-a-new-component.yml
@@ -1,6 +1,6 @@
 name: Propose a new component
 description: Do you need a new component?
-title: 🧱'
+title: '🧱 '
 labels: []
 body:
   - type: markdown
