--- a/components/molecule/dropdownList/package.json
+++ b/components/molecule/dropdownList/package.json
@@ -12,6 +12,7 @@
     "@s-ui/react-atom-input": "5",
     "@s-ui/react-hooks": "1",
     "@s-ui/react-molecule-dropdown-option": "1",
+    "@s-ui/react-primitive-injector": "1",
     "lodash.isequal": "4.5"
   },
   "peerDependencies": {
