--- a/components/atom/helpText/demo/package.json
+++ b/components/atom/helpText/demo/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-checkbox": "2",
+    "@s-ui/react-atom-icon": "1",
     "@s-ui/react-atom-input": "5",
     "@s-ui/react-atom-label": "1",
     "@s-ui/react-atom-textarea": "2"
