--- a/components/molecule/selectPopover/demo/package.json
+++ b/components/molecule/selectPopover/demo/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@s-ui/react-hook-use-portal": "1",
     "@s-ui/react-icons": "1",
     "@s-ui/react-molecule-dropdown-option": "2",
     "@s-ui/react-molecule-modal": "1",
