--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -236,7 +236,7 @@ jobs:
         id: deploy
         run: |
           npm i -g vercel --no-save --no-fund --no-audit --no-scripts
-          DEPLOYMENT_URL=$(vercel --token $VERCEL_TOKEN --confirm $VERCEL_PARAMS)
+          DEPLOYMENT_URL=$(vercel --token $VERCEL_TOKEN --yes $VERCEL_PARAMS)
           echo "::set-output name=url::$(echo $DEPLOYMENT_URL)"
         env:
           VERCEL_PARAMS: ${{ github.event_name != 'pull_request' && '--prod' || ''}}
