--- a/components/molecule/radioButtonGroup/demo/package.json
+++ b/components/molecule/radioButtonGroup/demo/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/hoc": "1",
     "@s-ui/react-atom-label": "1",
     "@s-ui/react-atom-radio-button": "1",
+    "@s-ui/react-atom-tooltip": "2",
     "@s-ui/react-molecule-radio-button-field": "1"
   }
 }
