--- a/components/molecule/select/package.json
+++ b/components/molecule/select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-molecule-select",
-  "version": "1.57.0",
+  "version": "1.57.0-beta.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@s-ui/js": "2",
-    "@s-ui/react-atom-input": "5",
+    "@s-ui/react-atom-input": "5.22.0-beta.0",
     "@s-ui/react-hooks": "1",
     "@s-ui/react-molecule-dropdown-list": "2",
-    "@s-ui/react-molecule-input-tags": "2",
+    "@s-ui/react-molecule-input-tags": "2.25.0-beta.1",
     "@s-ui/react-primitive-injector": "1"
   },
   "peerDependencies": {
