--- a/components/atom/spinner/demo/package.json
+++ b/components/atom/spinner/demo/package.json
@@ -14,6 +14,6 @@
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-atom-checkbox": "2",
     "@s-ui/react-atom-icon": "1",
-    "@s-ui/react-atom-input": "5"
+    "@s-ui/react-atom-input": "5.22.0-beta.0"
   }
 }
