--- a/components/molecule/accordion/demo/package.json
+++ b/components/molecule/accordion/demo/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-icon": "1",
-    "@s-ui/react-atom-tag": "2",
+    "@s-ui/react-atom-tag": "2.44.0-beta.0",
     "lorem-ipsum": "2.0.4",
     "react-json-view": "1.21.3"
   }
