--- a/components/molecule/autosuggestField/demo/package.json
+++ b/components/molecule/autosuggestField/demo/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/hoc": "1",
-    "@s-ui/react-molecule-autosuggest": "1",
+    "@s-ui/react-molecule-autosuggest": "2.66.0-beta.0",
     "@s-ui/react-molecule-dropdown-option": "2",
     "@s-ui/react-molecule-field": "1"
   }
