--- a/components/molecule/dataCounter/package.json
+++ b/components/molecule/dataCounter/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@s-ui/hoc": "1",
     "@s-ui/react-atom-button": "1",
-    "@s-ui/react-atom-input": "5",
+    "@s-ui/react-atom-input": "5.22.0-beta.0",
     "@s-ui/react-molecule-field": "1"
   },
   "peerDependencies": {
