--- a/components/molecule/dropdownList/package.json
+++ b/components/molecule/dropdownList/package.json
@@ -9,7 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/react-atom-input": "5",
+    "@s-ui/react-atom-input": "5.22.0-beta.0",
     "@s-ui/react-hooks": "1",
     "@s-ui/react-molecule-dropdown-option": "2",
     "@s-ui/react-primitive-injector": "1",
