--- a/components/molecule/dropdownOption/demo/package.json
+++ b/components/molecule/dropdownOption/demo/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-atom-input": "5",
+    "@s-ui/react-atom-input": "5.22.0-beta.0",
     "@s-ui/react-hooks": "1",
     "lorem-ipsum": "2.0.4"
   }
