--- a/components/molecule/inputField/package.json
+++ b/components/molecule/inputField/package.json
@@ -9,7 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/react-atom-input": "5",
+    "@s-ui/react-atom-input": "5.22.0-beta.0",
     "@s-ui/react-molecule-field": "1"
   },
   "peerDependencies": {
