--- a/components/molecule/inputTags/package.json
+++ b/components/molecule/inputTags/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-molecule-input-tags",
-  "version": "2.25.0",
+  "version": "2.25.0-beta.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -9,8 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/react-atom-input": "5",
-    "@s-ui/react-atom-tag": "2",
+    "@s-ui/react-atom-input": "5.22.0-beta.0",
+    "@s-ui/react-atom-tag": "2.44.0-beta.0",
     "@s-ui/react-hooks": "1"
   },
   "peerDependencies": {
