--- a/components/molecule/pagination/demo/package.json
+++ b/components/molecule/pagination/demo/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-button": "1",
-    "@s-ui/react-atom-input": "5",
+    "@s-ui/react-atom-input": "5.22.0-beta.0",
     "@s-ui/react-layout-media-query": "1",
     "@s-ui/react-molecule-button-group": "2"
   }
