--- a/components/molecule/photoUploader/demo/package.json
+++ b/components/molecule/photoUploader/demo/package.json
@@ -13,6 +13,6 @@
   "dependencies": {
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-molecule-dropdown-option": "2",
-    "@s-ui/react-molecule-select": "1"
+    "@s-ui/react-molecule-select": "1.57.0-beta.0"
   }
 }
