--- a/components/molecule/selectField/demo/package.json
+++ b/components/molecule/selectField/demo/package.json
@@ -14,6 +14,6 @@
     "@s-ui/hoc": "1",
     "@s-ui/react-molecule-dropdown-option": "2",
     "@s-ui/react-molecule-field": "1",
-    "@s-ui/react-molecule-select": "1"
+    "@s-ui/react-molecule-select": "1.57.0-beta.0"
   }
 }
