--- a/components/molecule/selectField/package.json
+++ b/components/molecule/selectField/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@s-ui/react-molecule-field": "1",
-    "@s-ui/react-molecule-select": "1"
+    "@s-ui/react-molecule-select": "1.57.0-beta.0"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
