--- a/components/molecule/selectPopover/demo/package.json
+++ b/components/molecule/selectPopover/demo/package.json
@@ -15,6 +15,6 @@
     "@s-ui/react-icons": "1",
     "@s-ui/react-molecule-dropdown-option": "2",
     "@s-ui/react-molecule-modal": "1",
-    "@s-ui/react-molecule-select": "1"
+    "@s-ui/react-molecule-select": "1.57.0-beta.0"
   }
 }
