--- a/components/molecule/carousel/package.json
+++ b/components/molecule/carousel/package.json
@@ -9,6 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
+    "classnames": "2.2.5",
     "intersection-observer": "0.10.0",
     "@s-ui/component-dependencies": "1",
     "@s-ui/react-hooks": "1"
