--- a/components/atom/button/package.json
+++ b/components/atom/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-atom-button",
-  "version": "1.89.0",
+  "version": "2.0.0-beta.0",
   "description": "Atom Element: SUI button",
   "main": "lib/index.js",
   "scripts": {
