--- a/components/primitive/theme/package.json
+++ b/components/primitive/theme/package.json
@@ -14,5 +14,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "@s-ui/react-head": "^1.11.0"
+  }
 }
