feat(components/primitive/theme): update custom properties

--- a/components/primitive/theme/package.json
+++ b/components/primitive/theme/package.json
@@ -16,6 +16,6 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "@s-ui/react-head": "^1.11.0"
+    "@s-ui/react-head": "alpha"
   }
 }
