feat(components/atom/button): add componnet theming customization

--- a/components/atom/button/package.json
+++ b/components/atom/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-atom-button",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0-beta.1",
   "description": "Atom Element: SUI button",
   "main": "lib/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@s-ui/component-dependencies": "latest",
-    "@s-ui/react-ecosystem-theme": "1.0.0-beta.6"
+    "@s-ui/react-ecosystem-theme": "beta"
   },
   "keywords": [],
   "license": "MIT"
