refactor(components/atom/videoPlayer): Avoid having multiple points not complying with the OCP

--- a/components/atom/videoPlayer/package.json
+++ b/components/atom/videoPlayer/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/SUI-Components/sui-components"
   },
   "dependencies": {
-    "hls.js": "^0.14.17"
+    "hls.js": "0.14.17"
   },
   "keywords": [],
   "author": "",
