--- a/components/molecule/coachmark/package.json
+++ b/components/molecule/coachmark/package.json
@@ -17,5 +17,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react-joyride": "2"
+  }
 }
